--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,13 @@
     "python.testing.pytestArgs": [
         "Phase1_Scalability"
     ],
-    "python.testing.unittestEnabled": true,
-    "python.testing.pytestEnabled": true
+    "python.testing.unittestEnabled": false,
+    "python.testing.pytestEnabled": true,
+    "python.testing.unittestArgs": [
+        "-v",
+        "-s",
+        "./Phase1_Scalability",
+        "-p",
+        "test*.py"
+    ]
 }
